Week 2 Added Start-screen 	Segues to the starting list Working back buttons added to 	ElementViewController(Add Bird) -> Table View 	TableViewController(Table View) -> Start Screen Added Ability to set the image for the element (does not save) Added Ability to add new elements to table view from the add screen
Added default image from last project to prompt user image selection (will need to remove/replace)
Added keys to Info.plist for Photo Library and Camera usage

Changed Colour of Launch Screen and added text to see whats going on easier

--- a/Ios Assessment 2/Info.plist
+++ b/Ios Assessment 2/Info.plist
@@ -41,5 +41,11 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>1</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>2</string>
+	<key>NSCameraUsageDescription</key>
+	<string>3</string>
 </dict>
 </plist>
