--- a/Ios Assessment 2/Info.plist
+++ b/Ios Assessment 2/Info.plist
@@ -47,5 +47,9 @@
 	<string>2</string>
 	<key>NSCameraUsageDescription</key>
 	<string>3</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>4</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>5</string>
 </dict>
 </plist>
